# husen

./: .gitignore  README.md  pyproject.toml
back/: .env.example  main.py  test.py
back/auth/: oauth.py  router.py
back/db/: husen_memo_db.py
doc/: 名称未設定ファイル(3).drawio  名称未設定ファイル(3)1.drawio  名称未設定ファイル.drawio
doc/THRD-PARTY-LICENSES/: THIRD-PARTY-LICENSES-JS.txt  THIRD-PARTY-LICENSES-PY.txt
front/src/: App.tsx
