[project]
name = "husen"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "authlib>=1.7.2",
    "fastapi[standard]>=0.136.3",
    "httpx>=0.28.1",
    "itsdangerous>=2.2.0",
    "pip-licenses>=5.5.5",
    "pytest>=9.1.1",
    "python-dotenv>=1.2.2",
    "sqlmodel>=0.0.38",
]
